--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
 		"sass": "^1.35.2",
 		"slick-carousel": "^1.8.1"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"jquery-form-styler": "^2.0.2"
+	}
 }
